# ad_trait

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: deploy_book.yml
docs/: README.md  book.toml
docs/book/: 404.html  ad_trait.html  concepts.html  getting_started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-b2afc4f2.js  searchindex-b68f6b0e.js  toc-01f9e83b.js  toc-48b6054b.js  toc.html
docs/book/advanced/: index.html  matrix.html  multi_tangent.html  simd.html
docs/book/examples/: index.html
docs/book/integration/: index.html  nalgebra.html  ndarray.html
docs/book/modes/: finite_differencing.html  forward.html  index.html  reverse.html
docs/src/: SUMMARY.md  ad_trait.md  concepts.md  getting_started.md  intro.md
docs/src/advanced/: index.md  matrix.md  multi_tangent.md  simd.md
docs/src/examples/: index.md
docs/src/integration/: index.md  nalgebra.md  ndarray.md
docs/src/modes/: finite_differencing.md  forward.md  index.md  reverse.md
examples/: example1.rs
src/: differentiable_block.rs  differentiable_function.rs  function_engine.rs  lib.rs  main.rs
src/differentiable_block/: mod.rs
src/differentiable_function/: mod.rs
src/forward_ad/: adf.rs  adf2.rs  adf3.rs  adf_tmp.rs  adfg.rs  adfn.rs  mod.rs
src/reverse_ad/: adr.rs  adr2.rs  mod.rs
src/simd/: f64xn.rs  mod.rs
tests/: regression_tests.rs
