[package]
name = "ad_trait"
version = "0.2.0"
edition = "2021"
description = "Easy to use, efficient, and highly flexible automatic differentiation in Rust"
authors = ["Danny Rakita <daniel.rakita@yale.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djrakita/ad_trait"
readme = "README.md"
keywords = ["autodiff", "differentiation", "derivatives", "AD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33", features = ["rand", "serde-serialize", "alloc", "std", "libm"] }
num-traits = "0.2.19"
simba = { version = "0.9.1" }
approx = "0.5.1"
rand = "0.8.5"
once_cell = "1.21.3"
tinyvec = {version = "1.10.0", features = ['alloc'] }
serde = { version="1.0", features=["derive"] }
ndarray = "0.17.1"
bevy_reflect = { version="0.17.3" }
serde_with = { version="3.16.1" }

[features]
default = []
nightly = []

[profile.dev]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
