[package]
name = "ad_trait"
version = "0.2.2"
edition = "2021"
description = "Easy to use, efficient, and highly flexible automatic differentiation in Rust"
authors = ["Danny Rakita <daniel.rakita@yale.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djrakita/ad_trait"
readme = "README.md"
keywords = ["autodiff", "differentiation", "derivatives", "AD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["alloc", "libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
simba = { version = "0.9.1", default-features = false, features = ["libm"] }
approx = { version = "0.5.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["alloc"], optional = true }
once_cell = "1.21.3"
tinyvec = {version = "1.10.0", features = ['alloc', 'serde'] }
serde = { version="1.0", default-features = false, features=["derive", "alloc"] }
ndarray = { version = "0.17.1", default-features = false }
bevy_reflect = { version="0.17.3", optional = true }
serde_with = { version="3.16.1", default-features = false, features = ["alloc", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std", "bevy", "rand", "serde"]
std = [
    "nalgebra/std",
    "num-traits/std",
    "simba/std",
    "approx/std",
    "rand?/std",
    "serde/std",
    "ndarray/std",
    "serde_with/std",
    "tinyvec/std"
]
bevy = ["dep:bevy_reflect"]
rand = ["dep:rand", "nalgebra/rand"]
serde = ["nalgebra/serde-serialize"]
nightly = []

[profile.dev]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
